Fix pagination text contrast in dark mode

--- a/app/assets/stylesheets/nla/_dark-mode.scss
+++ b/app/assets/stylesheets/nla/_dark-mode.scss
@@ -427,7 +427,8 @@
   
   
   // Pagination
-  .page-link {
+  .page-link,
+  .page-item.disabled .page-link:not(a) {
     color: $pagination-color-dark;
   }
 
